--- a/JiuJiuWeb/src/index.html
+++ b/JiuJiuWeb/src/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Jiujiuweb</title>
+  <script src="//cdn.ckeditor.com/4.6.2/full/ckeditor.js"></script>
+
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
